# gen-compile-commands

./: Cargo.toml  LICENSE  README.md
src/: main.rs
