[package]
name = "gen-compile-commands"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Simple compile_commands.json generator"
repository = "https://github.com/mikea/gen-compile-commands"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"